--- a/software.html
+++ b/software.html
@@ -40,39 +40,39 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=o2za8fwD&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nUyLmMwQ'>Gigamon Careers - Staff Software Engineer - Data Storage, ETL and Analytics</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/tivix/8a3901eb-9b6c-41c1-b835-07c76d4067b5'>Tivix - Senior Software Engineer (PHP)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco New York London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/tivix/9c2180ce-93fc-4f07-bf03-b9d75a5b79ba'>Tivix - Senior Software Engineer (PHP)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://ten10.recruiterbox.com/jobs/fk03iaw/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ten10.recruiterbox.com/jobs/fk03iaw/'>
     Lead SDET / Lead Software Developer in Test at Ten10
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Leeds, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://ten10.recruiterbox.com/jobs/fk03ic9/'>
     Software Developer in Test/SDET at Ten10
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Leeds, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698336157-sr-software-engineer'>Visa Sr. Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://olo.applytojob.com/apply/rkGJCwhYVp/Software-Engineer-BackEnd-Developer'>Software Engineer - Back-End Developer - Olo - Career Page</a></h5> 
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://pulsesecure.applytojob.com/apply/090w7A5kdo/Sr-Manager-Software-Engineering'>Sr. Manager Software Engineering - Pulse Secure - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pulsesecure.applytojob.com/apply/090w7A5kdo/Sr-Manager-Software-Engineering'>Sr. Manager Software Engineering - Pulse Secure - Career Page</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -135,11 +135,11 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zetaglobal/job/ooDVafwQ'>Zeta Global Careers - Software Engineer - AI & ML</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/ooDVafwQ'>Zeta Global Careers - Software Engineer - AI & ML</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -155,7 +155,7 @@
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nArxmMwb'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nArxmMwb'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -167,11 +167,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Pasadena-California-United-States-Software-Engineer/26446'>Software Engineer - US, CA, Pasadena - 26446</a></h5> 
+<h5><a href='https://opentextats.avature.net/careers/JobDetail/Pasadena-California-United-States-Software-Engineer/26446'>Software Engineer - US, CA, Pasadena - 26446</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/savioke.com/af856012-7bf7-4d37-861c-468f9639d49d'>Savioke - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/savioke.com/af856012-7bf7-4d37-861c-468f9639d49d'>Savioke - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -217,7 +217,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -233,7 +233,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/align-tech/job/oyqmbfwf'>Align Technology Careers - Expert Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/align-tech/job/oyqmbfwf'>Align Technology Careers - Expert Software Developer</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -273,7 +273,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.softwarecornwall.org/job/everest-media-ltd-pool-redruth-full-time-part-time-junior-software-developer/'> Junior Software Developer</a></h5> 
+<h5><a href='https://www.softwarecornwall.org/job/everest-media-ltd-pool-redruth-full-time-part-time-junior-software-developer/'> Junior Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -289,7 +289,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/software-developer-in-test-27487'>Software Developer in Test - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/software-developer-in-test-27487'>Software Developer in Test - RELX Careers</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -301,7 +301,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  United States  United States Boston</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
+<h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
       Senior Software Engineer (Backend) - Peanut
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -367,7 +367,7 @@
 <p><span class="badge badge-light">Cambridge Cambridge  Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aedit/jobs/4492550002'>Job Application for Machine Learning/Computer Vision Software Engineer at AEDIT</a></h5> 
+<h5><a href='https://boards.greenhouse.io/aedit/jobs/4492550002'>Job Application for Machine Learning/Computer Vision Software Engineer at AEDIT</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -432,7 +432,7 @@ change how Global Trade is done. Our products need to handle information at?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -454,11 +454,11 @@ change how Global Trade is done. Our products need to handle information at?...<
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://virtumente.com/job/software-engineer-java-developer/'>Software Engineer ? Java Developer ? Virtumente</a></h5> 
+<h5><a href='https://virtumente.com/job/software-engineer-java-developer/'>Software Engineer ? Java Developer ? Virtumente</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
